--- a/client/public/manifest.fin.json
+++ b/client/public/manifest.fin.json
@@ -7,7 +7,7 @@
   },
   "platform": {
     "uuid": "stern-trading-platform",
-    "icon": "http://localhost:5173/stern.png",
+    "icon": "http://localhost:5173/stern.svg",
     "autoShow": true,
     "providerUrl": "http://localhost:5173/platform/provider",
     "preventQuitOnLastWindowClosed": true
@@ -15,7 +15,7 @@
   "shortcut": {
     "company": "Stern Trading",
     "description": "Stern Trading Platform - Unified Configurable Blotter",
-    "icon": "http://localhost:5173/stern.png",
+    "icon": "http://localhost:5173/stern.svg",
     "name": "Stern Trading Platform",
     "target": ["desktop", "start-menu"]
   },
@@ -42,7 +42,7 @@
         "manifestType": "view",
         "icons": [
           {
-            "src": "http://localhost:5173/stern.png"
+            "src": "http://localhost:5173/stern.svg"
           }
         ],
         "contactEmail": "support@stern.com",
@@ -61,7 +61,7 @@
         "manifestType": "view",
         "icons": [
           {
-            "src": "http://localhost:5173/stern.png"
+            "src": "http://localhost:5173/stern.svg"
           }
         ],
         "contactEmail": "support@stern.com",
