--- a/server/package.json
+++ b/server/package.json
@@ -27,37 +27,40 @@
   "author": "Stern Development Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^6.8.1",
+    "@stern/shared-types": "file:../shared",
     "better-sqlite3": "^9.2.2",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.8.1",
+    "helmet": "^7.1.0",
+    "joi": "^17.12.0",
     "mongodb": "^6.3.0",
     "uuid": "^9.0.1",
-    "joi": "^17.12.0",
-    "winston": "^3.11.0",
-    "dotenv": "^16.3.1"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
     "@types/better-sqlite3": "^7.6.8",
-    "@types/uuid": "^9.0.7",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.6",
     "@types/supertest": "^6.0.2",
-    "typescript": "^5.3.3",
-    "ts-node": "^10.9.2",
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.4",
-    "eslint": "^8.56.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
-    "rimraf": "^5.0.5"
+    "eslint": "^8.56.0",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "lint-staged": "^16.2.3",
+    "nodemon": "^3.0.2",
+    "rimraf": "^5.0.5",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
