--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,9 @@
     "@rollup/rollup-win32-x64-msvc": "^4.52.0",
     "@stern/shared-types": "file:../shared",
     "@types/openfin": "^51.0.6",
+    "ag-grid-community": "^34.2.0",
+    "ag-grid-enterprise": "^34.2.0",
+    "ag-grid-react": "^34.2.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
