--- a/client/public/manifest.fin.json
+++ b/client/public/manifest.fin.json
@@ -7,15 +7,24 @@
   },
   "platform": {
     "uuid": "stern-platform",
-    "icon": "http://localhost:5173/stern.svg",
+    "icon": "http://localhost:5176/stern.svg",
     "autoShow": false,
-    "providerUrl": "http://localhost:5173/platform/provider",
+    "providerUrl": "http://localhost:5176/platform/provider",
     "preventQuitOnLastWindowClosed": true
+  },
+  "desktopSettings": {
+    "systemApps": {
+      "workspace": {
+        "customConfig": {
+          "disableOpenFinAnalytics": true
+        }
+      }
+    }
   },
   "shortcut": {
     "company": "Stern Trading",
     "description": "Stern Trading Platform",
-    "icon": "http://localhost:5173/stern.svg",
+    "icon": "http://localhost:5176/stern.svg",
     "name": "Stern Trading Platform",
     "target": ["desktop", "start-menu"]
   },
@@ -32,9 +41,9 @@
         "name": "stern-blotter",
         "title": "Stern Blotter",
         "description": "Main trading blotter",
-        "url": "http://localhost:5173/",
+        "url": "http://localhost:5176/",
         "manifestType": "view",
-        "icons": [{ "src": "http://localhost:5173/stern.svg" }],
+        "icons": [{ "src": "http://localhost:5176/stern.svg" }],
         "tags": ["trading", "blotter"]
       }
     ]
