put configserviice url in app manifest

--- a/client/.env.example
+++ b/client/.env.example
@@ -2,7 +2,9 @@
 # Copy this file to .env.local for local development
 
 # Backend API URL
-VITE_API_URL=http://localhost:3000
+# NOTE: In OpenFin, the manifest.platform.context.apiUrl takes precedence over this value
+# This is used as a fallback when not running in OpenFin or when context is not defined
+VITE_API_URL=http://localhost:3001
 
 # OpenFin Base URL for production
 VITE_OPENFIN_BASE_URL=https://your-production-domain.com
